prototypes/p5b/tests/invalid/07_unknown_module.hll
// INVALID: importing from non-existent module
module broken

import phantom.DoesNotExist  // ERROR: module phantom not found

function main() {
    let x = DoesNotExist()
}
